--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -6,170 +6,53 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇷🇺_RU_俄罗斯联邦_1
-    type: trojan
-    server: 89.221.224.94
-    port: 80
-    udp: true
-    password: 28c79056-ccfd-4cc1-93d4-c337cc782e65
-    sni: is2-t.sshmax.xyz
-    skip-cert-verify: true
-    network: tcp
-  - &id002
-    name: 🇺🇸_US_美国_1
-    type: trojan
-    server: 172.234.99.161
-    port: 443
-    udp: true
-    password: 5f610684-118f-46cf-aa34-9951475b75ad
-    skip-cert-verify: true
-    network: tcp
-  - &id003
-    name: 🇺🇸_US_美国_2
+    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_1
     type: vmess
-    server: whatismyipaddress.com
+    server: cdncdncdncdn.784654.xyz
     port: 2052
     cipher: auto
-    uuid: bf3d038a-93a2-4e24-886c-6bc64e3c3a90
+    uuid: 59a660f7-508f-476c-a38f-0a37de0ca415
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /
+      path: /index?ed=2048
       headers:
-        host: mgtow_cdn.yunjisuan.cf
-  - &id004
-    name: 🇺🇸_US_美国_3
+        host: ca-cfcdn.aikunapp.com
+  - &id002
+    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_2
     type: vmess
-    server: 104.237.128.72
-    port: 14432
+    server: us-west-anycast.lnaspiring.com
+    port: 80
     cipher: auto
-    uuid: 4c09b776-6f83-4bf2-f7f7-4e286dbbb6da
+    uuid: 7b0fd7b9-7c81-4fff-85e3-ce582b5d4e5b
     alterId: 0
     tls: false
     skip-cert-verify: true
-    network: tcp
-  - &id005
-    name: 🇺🇸_US_美国_4
-    type: ss
-    server: 38.91.107.37
-    port: 7001
-    password: RexnBgU7EV5ADxG
-    cipher: aes-256-gcm
-  - &id006
-    name: 🇺🇸_US_美国_5
-    type: ss
-    server: 38.91.107.37
-    port: 5003
-    password: g5MeD6Ft3CWlJId
-    cipher: aes-256-gcm
-  - &id007
-    name: 🇺🇸_US_美国_6
-    type: ss
-    server: 35.90.10.174
-    port: 443
-    password: amazonskr05
-    cipher: aes-256-cfb
-  - &id008
-    name: 🇸🇪_SE_瑞典
-    type: ss
-    server: 45.8.147.80
-    port: 5741
-    password: Q5CEiebSuSl2qFkfE4ztG2
-    cipher: chacha20-ietf-poly1305
-  - &id009
-    name: 🇺🇸_US_美国_7
-    type: vmess
-    server: 172.233.188.217
-    port: 55579
-    cipher: auto
-    uuid: 610f7b76-a4e2-4b5a-c458-96e69cbffb5e
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id010
-    name: 🇫🇷_FR_法国_1
-    type: ss
-    server: 185.231.205.80
-    port: 1443
-    password: MGQwNTgw
-    cipher: chacha20-ietf-poly1305
-  - &id011
-    name: 🇺🇦_UA_乌克兰
-    type: vmess
-    server: 193.238.153.14
-    port: 8443
-    cipher: auto
-    uuid: 159693e0-5146-482d-9e46-8c4f2fc865b1
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: tcp
-  - &id012
-    name: 🇺🇸_US_美国_8
+    network: ws
+    ws-opts:
+      path: /geg/44?ed=2048
+      headers:
+        host: uspz.edge.233.tw
+  - &id003
+    name: 🇺🇸_US_美国_1
     type: ss
     server: 38.91.107.37
     port: 4444
     password: pKEW8JPByTVTLtM
     cipher: aes-256-gcm
-  - &id013
-    name: 🇩🇪_DE_德国
-    type: vmess
-    server: 217.160.45.31
-    port: 8880
-    cipher: auto
-    uuid: 4e186678-fcca-4325-e4bc-b2916bdf6708
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-  - &id014
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_1
+  - &id004
+    name: 🇷🇺_RU_俄罗斯联邦_1
     type: trojan
-    server: 19235tj.matrixxx888.com
-    port: 19235
+    server: 89.221.224.93
+    port: 80
     udp: true
-    password: af84eec7-8324-30b9-89b8-a8a7e4fb5d3a
-    sni: eplcgame.com
+    password: 9e77b491-73d4-4ea3-985b-cfe3ae583580
+    sni: is1-t.sshmax.xyz
     skip-cert-verify: true
     network: tcp
-  - &id015
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
-    type: trojan
-    server: 19234tj.matrixxx888.com
-    port: 19234
-    udp: true
-    password: af84eec7-8324-30b9-89b8-a8a7e4fb5d3a
-    sni: eplcgame.com
-    skip-cert-verify: true
-    network: tcp
-  - &id016
-    name: 🇺🇸_US_美国_9
-    type: vmess
-    server: 38.180.33.136
-    port: 50104
-    cipher: auto
-    uuid: 790f6802-7535-4109-de6d-15f676d5e3f7
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id017
-    name: 🇷🇺_RU_俄罗斯联邦_2
-    type: vmess
-    server: 46.29.166.237
-    port: 47555
-    cipher: auto
-    uuid: 0c49cd19-2758-4d38-e6a8-11f2d6635860
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id018
+  - &id005
     name: 🇨🇦_CA_加拿大
     type: vmess
     server: 45.138.70.247
@@ -182,40 +65,10 @@ proxies:
     network: ws
     ws-opts:
       path: /11451
-  - &id019
-    name: 🇺🇸_US_美国_10
+  - &id006
+    name: 🇺🇸_US_美国_2
     type: vmess
-    server: best-charm-pediatrician.glitch.me
-    port: 443
-    cipher: auto
-    uuid: 1d5fb496-19fb-48fb-9880-a147326dee62
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /1d5fb496-19fb-48fb-9880-a147326dee62-vmess
-      headers:
-        host: best-charm-pediatrician.glitch.me
-  - &id020
-    name: 🇺🇸_US_美国_11
-    type: vmess
-    server: bolder-metal-comma.glitch.me
-    port: 443
-    cipher: auto
-    uuid: dac61bb8-461c-4a4a-b14b-5a5ff6991fee
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /dac61bb8-461c-4a4a-b14b-5a5ff6991fee-vmess
-      headers:
-        host: bolder-metal-comma.glitch.me
-  - &id021
-    name: 🇺🇸_US_美国_12
-    type: vmess
-    server: cf-lt.sharecentre.online
+    server: singapore.com
     port: 80
     cipher: auto
     uuid: b1e30339-a603-47d1-b31c-1d0ceb59952e
@@ -226,65 +79,85 @@ proxies:
     ws-opts:
       path: /api/v3/download.getFile
       headers:
-        host: ssrsub.v005.ssrsub.com
-  - &id022
-    name: 🇺🇸_US_美国_13
+        host: ssrsub.v03.ssrsub.com
+  - &id007
+    name: 🇨🇳_CN_中国_1
     type: vmess
-    server: www.visa.com
-    port: 2082
+    server: 159.75.178.50
+    port: 47551
     cipher: auto
-    uuid: bf3d038a-93a2-4e24-886c-6bc64e3c3a90
+    uuid: 2500a228-8c00-4934-81e0-22281c015a33
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
       path: /
-      headers:
-        host: mgtow_cdn.yunjisuan.cf
-  - &id023
-    name: 🇳🇱_NL_荷兰
-    type: vmess
-    server: 46.182.107.15
-    port: 30000
-    cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
-    alterId: 64
-    tls: true
+  - &id008
+    name: 🇷🇺_RU_俄罗斯联邦_2
+    type: trojan
+    server: 89.221.224.94
+    port: 80
+    udp: true
+    password: 28c79056-ccfd-4cc1-93d4-c337cc782e65
+    sni: is2-t.sshmax.xyz
     skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /path/1702215223320
-  - &id024
-    name: 🇺🇸_US_美国_14
+    network: tcp
+  - &id009
+    name: 🇺🇸_US_美国->🇬🇧_GB_英国
+    type: trojan
+    server: frontend.kuangbiaoyun.com
+    port: 40019
+    udp: true
+    password: ad953998-e8ea-4d5b-8b2f-e63edd9d375d
+    sni: frontend.kuangbiaoyun.com
+    skip-cert-verify: true
+    network: tcp
+  - &id010
+    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_3
+    type: trojan
+    server: frontend.kuangbiaoyun.com
+    port: 40020
+    udp: true
+    password: ad953998-e8ea-4d5b-8b2f-e63edd9d375d
+    sni: frontend.kuangbiaoyun.com
+    skip-cert-verify: true
+    network: tcp
+  - &id011
+    name: 🇺🇸_US_美国_3
     type: vmess
-    server: 132.145.132.227
-    port: 37121
+    server: 38.180.33.136
+    port: 50104
     cipher: auto
-    uuid: 93845b50-26f6-4203-f5ad-4d231d4e8f45
+    uuid: 790f6802-7535-4109-de6d-15f676d5e3f7
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id012
+    name: 🇺🇸_US_美国_4
+    type: vmess
+    server: lt2-vmess.sshmax.xyz
+    port: 80
+    cipher: auto
+    uuid: ea2928cb-f9cc-4747-ab60-d23abe3ba1e6
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /
-  - &id025
-    name: 🇺🇸_US_美国_15
-    type: vmess
-    server: cold-dawn-9246.fly.dev
-    port: 443
-    cipher: auto
-    uuid: ea4909ef-7ca6-4b46-bf2e-6c07896ef338
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /ea4909ef-7ca6-4b46-bf2e-6c07896ef338-vm
+      path: /vmess
       headers:
-        host: cold-dawn-9246.fly.dev
-  - &id026
-    name: 🇺🇸_US_美国_16
+        host: lt2-vmess.sshmax.xyz
+  - &id013
+    name: 🇸🇪_SE_瑞典
+    type: ss
+    server: 45.8.147.80
+    port: 5741
+    password: Q5CEiebSuSl2qFkfE4ztG2
+    cipher: chacha20-ietf-poly1305
+  - &id014
+    name: 🇺🇸_US_美国_5
     type: vmess
     server: 104.21.75.246
     port: 80
@@ -298,8 +171,150 @@ proxies:
       path: /
       headers:
         host: sbl2.shabijichang.com
+  - &id015
+    name: 🇺🇸_US_美国_6
+    type: vmess
+    server: Telegram-Channel.hkaa0_shop.66688888.xyz
+    port: 2092
+    cipher: auto
+    uuid: 038e2714-5cbf-4812-fcfb-8726665c63b6
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /telegram:@hkaa0
+      headers:
+        host: Telegram-Channel.hkaa0_shop.66688888.xyz
+  - &id016
+    name: 🇷🇺_RU_俄罗斯联邦_3
+    type: trojan
+    server: els_trojanone.yunjisuan.cf
+    port: 14866
+    udp: true
+    password: bf3d038a-93a2-4e24-886c-6bc64e3c3a90
+    sni: els_trojanone.yunjisuan.cf
+    skip-cert-verify: true
+    network: tcp
+  - &id017
+    name: 🇺🇸_US_美国_7
+    type: vmess
+    server: 144.202.84.47
+    port: 57848
+    cipher: auto
+    uuid: e48643e7-0462-4055-f796-6ca6aa9f946d
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id018
+    name: 🇷🇺_RU_俄罗斯联邦_4
+    type: vmess
+    server: 46.29.166.237
+    port: 47555
+    cipher: auto
+    uuid: 0c49cd19-2758-4d38-e6a8-11f2d6635860
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id019
+    name: 🇺🇸_US_美国_8
+    type: vmess
+    server: 68.183.159.199
+    port: 2092
+    cipher: auto
+    uuid: 038e2714-5cbf-4812-fcfb-8726665c63b6
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /telegram:@hkaa0
+  - &id020
+    name: 🇺🇸_US_美国_9
+    type: trojan
+    server: 172.234.99.161
+    port: 443
+    udp: true
+    password: 5f610684-118f-46cf-aa34-9951475b75ad
+    skip-cert-verify: true
+    network: tcp
+  - &id021
+    name: 🇨🇳_CN_中国_2
+    type: ss
+    server: 45.87.153.246
+    port: 6199
+    password: f7EI0dGWQM42T8gwN9CZIj
+    cipher: chacha20-ietf-poly1305
+  - &id022
+    name: 🇩🇪_DE_德国
+    type: vmess
+    server: 217.160.45.31
+    port: 8880
+    cipher: auto
+    uuid: 4e186678-fcca-4325-e4bc-b2916bdf6708
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+  - &id023
+    name: 🇳🇿_NZ_新西兰
+    type: trojan
+    server: 216.73.156.230
+    port: 443
+    udp: true
+    password: 11e247e5-136d-45f1-844a-a7f054d36bab
+    sni: 216.73.156.230
+    skip-cert-verify: true
+    network: tcp
+  - &id024
+    name: 🇺🇸_US_美国_10
+    type: vmess
+    server: whatismyipaddress.com
+    port: 2052
+    cipher: auto
+    uuid: bf3d038a-93a2-4e24-886c-6bc64e3c3a90
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: mgtow_cdn.yunjisuan.cf
+  - &id025
+    name: 🇺🇸_US_美国_11
+    type: vmess
+    server: cf-lt.sharecentre.online
+    port: 80
+    cipher: auto
+    uuid: b1e30339-a603-47d1-b31c-1d0ceb59952e
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /api/v3/download.getFile
+      headers:
+        host: ssrsub.v005.ssrsub.com
+  - &id026
+    name: 🇺🇸_US_美国_12
+    type: vmess
+    server: 132.145.132.227
+    port: 37121
+    cipher: auto
+    uuid: 93845b50-26f6-4203-f5ad-4d231d4e8f45
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
   - &id027
-    name: 🇺🇸_US_美国_17
+    name: 🇺🇸_US_美国_13
     type: vmess
     server: sbl2.shabijichang.com
     port: 80
@@ -314,56 +329,112 @@ proxies:
       headers:
         host: sbl2.shabijichang.com
   - &id028
-    name: 🇫🇷_FR_法国_2
-    type: trojan
-    server: fr1.test3.net
-    port: 443
-    udp: true
-    password: df36f470-971e-11ee-b1bd-1239d0255272
+    name: 🇺🇦_UA_乌克兰
+    type: vmess
+    server: 193.238.153.14
+    port: 8443
+    cipher: auto
+    uuid: 159693e0-5146-482d-9e46-8c4f2fc865b1
+    alterId: 0
+    tls: true
     skip-cert-verify: true
     network: tcp
   - &id029
-    name: 🇺🇸_US_美国_18
-    type: trojan
-    server: jp2.lvwf8n-hh8e-2300-nmoo-d2e9naobeacn.9d8f269f96b25232-759cbb36d6548597.kaufen
-    port: 443
-    udp: true
-    password: fb73fbf9-ed99-44ca-8eba-ccdcd7d59f67
-    sni: 13-231-155-134.nhost.00cdn.com
-    skip-cert-verify: true
-    network: tcp
-  - &id030
-    name: 🇷🇺_RU_俄罗斯联邦_3
-    type: ss
-    server: 45.144.30.202
-    port: 28490
-    password: yZdRgske85Hou96z2dRdtH
-    cipher: chacha20-ietf-poly1305
-  - &id031
-    name: 🇺🇸_US_美国_19
-    type: ss
-    server: 35.87.39.181
-    port: 443
-    password: amazonskr05
-    cipher: aes-256-cfb
-  - &id032
-    name: 🇺🇸_US_美国_20
+    name: 🇮🇷_IR_伊朗
     type: vmess
-    server: 96.30.197.59
-    port: 56272
+    server: 79.143.84.117
+    port: 24141
     cipher: auto
-    uuid: 8e8d5a10-7fd0-4818-8265-a4dc4a569d31
+    uuid: 46465bbe-628a-4988-ae3c-0c164237a039
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: tcp
+  - &id030
+    name: 🇬🇧_GB_英国
+    type: vmess
+    server: Telegram-Channel.hkbb0.66688888.xyz
+    port: 2092
+    cipher: auto
+    uuid: 7b4680c5-222f-4a29-84c0-226d16dab9ab
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /telegram:@hkaa0
+      headers:
+        host: Telegram-Channel.hkbb0.66688888.xyz
+  - &id031
+    name: 🇷🇺_RU_俄罗斯联邦_5
+    type: vmess
+    server: 89.221.224.12
+    port: 80
+    cipher: auto
+    uuid: c692f74a-9314-48ea-92e2-c4179e0dacbe
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /vmess
+      headers:
+        host: 89.221.224.12
+  - &id032
+    name: 🇺🇸_US_美国_14
+    type: vmess
+    server: www.udemy.com
+    port: 2082
+    cipher: auto
+    uuid: bf3d038a-93a2-4e24-886c-6bc64e3c3a90
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: els_cdnone.yunjisuan.cf
   - &id033
-    name: 🇺🇸_US_美国_21
+    name: 🇺🇸_US_美国_15
+    type: vmess
+    server: ns1.v2-vip.fun
+    port: 80
+    cipher: auto
+    uuid: b1e30339-a603-47d1-b31c-1d0ceb59952e
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /api/v3/download.getFile
+      headers:
+        host: ssrsub.v005.ssrsub.com
+  - &id034
+    name: 🇺🇸_US_美国_16
+    type: ss
+    server: 45.8.146.35
+    port: 47413
+    password: U1EYRQpU8rLGRKvDMfR6Fv
+    cipher: chacha20-ietf-poly1305
+  - &id035
+    name: 🇺🇸_US_美国_17
     type: ss
     server: 45.58.39.13
     port: 58428
     password: 31LdYhP8Ae
     cipher: aes-256-gcm
+  - &id036
+    name: 🇺🇸_US_美国_18
+    type: vmess
+    server: 104.237.128.72
+    port: 14432
+    cipher: auto
+    uuid: 4c09b776-6f83-4bf2-f7f7-4e286dbbb6da
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
 proxy-groups:
   - name: PROXY
     type: select
@@ -423,6 +494,9 @@ proxy-groups:
       - *id031
       - *id032
       - *id033
+      - *id034
+      - *id035
+      - *id036
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -461,6 +535,9 @@ proxy-groups:
       - *id031
       - *id032
       - *id033
+      - *id034
+      - *id035
+      - *id036
   - name: SELECT
     type: select
     proxies:
@@ -497,6 +574,9 @@ proxy-groups:
       - *id031
       - *id032
       - *id033
+      - *id034
+      - *id035
+      - *id036
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
